# cedar

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: CMakeLists.txt  Makefile.in  cedar.h  cedarpp.h  mkcedar.cc  simple.cc
